frame/support/test/tests/pallet_ui/pallet_doc_invalid_arg.rs
#[frame_support::pallet]
// Argument expected as list, not named value.
#[pallet_doc = "invalid"]
mod pallet {
	#[pallet::config]
	pub trait Config: frame_system::Config
	where
		<Self as frame_system::Config>::Nonce: From<u128>,
	{
	}

	#[pallet::pallet]
	pub struct Pallet<T>(core::marker::PhantomData<T>);
}

fn main() {}
